# PV_self_consumption_client

./: .gitignore  .pre-commit-config.yaml  README.md  client_api.py  pvsc.py  pyproject.toml  test_api.py  usage.csv  utils.py
src/pv_self_consumption_api/: client_api.py  models.py  utils.py
tests/: test_api.py
