[project]
name = "PV_self-consumption"
version = "0.1.0"
description = "PV_self-consumption"

dependencies = [
    "pydantic>=2.9.2",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "requests>=2.32.3",
    "matplotlib>=3.9.2"
]

requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
api = [
"fastapi>=0.115.0",
"uvicorn>=0.31.0",
"python-multipart>=0.0.12"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
server.call = "api.start_api:run_app"