[project]
name = "PV_self-consumption_api_client"
version = "0.1.0"
description = "PV_self-consumption API client"

dependencies = [
    "pydantic>=2.9.2",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "requests>=2.32.3",
    "matplotlib>=3.9.2",
    "pyyaml>=6.0.2",
]

requires-python = ">=3.12"
readme = "README.md"
authors = [
{name = "Sébastien Gardoll", email = "sebastien@gardoll.fr"},
{name = "Olivier Boucher", email = "olivier.boucher@ipsl.fr"},
]
license = {text = "CeCILL v2.1"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
server.call = "api.start_api:run_app"